--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "adv-state",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.1",
+  "description": "Implementation of a basic state machine",
+  "main": "AdvStateMachine.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +16,5 @@
     "url": "https://github.com/viocost/adv-state/issues"
   },
   "homepage": "https://github.com/viocost/adv-state#readme",
-  "dependencies": {
-    "gojs": "^2.1.20"
-  }
+  "dependencies": {}
 }
