--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "obs-bus": "^1.0.3"
   },
   "devDependencies": {
+    "@types/node": "^16.7.6",
     "prettier": "^2.3.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
