--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Implementation of a basic state machine",
   "main": "AdvStateMachine.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,11 @@
     "obs-bus": "^1.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.7.6",
+    "jest": "^27.1.0",
     "prettier": "^2.3.2",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
