--- a/package.json
+++ b/package.json
@@ -27,5 +27,16 @@
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
-  }
+  },
+  "keywords": [
+    "state",
+    "machine",
+    "fsm",
+    "state machine",
+    "finite state machine",
+    "adv-state",
+    "fsa",
+    "finite automata"
+  ]
+
 }
