--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^16.7.6",
     "jest": "^27.1.0",
     "prettier": "^2.3.2",
+    "ts-auto-mock": "^3.4.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
